tests/invalid/missing_second_and_op.c
int main() {
    return 2 &&
}
// ERROR: Line 3, Error 2009